stubbed leaderboard get and UX

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ crate-type = ["cdylib"]
 [dependencies]
 lazy_static = "1.0"
 itertools-num = "0.1.1"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.48"
