--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,10 @@ lazy_static = "1.0"
 itertools-num = "0.1.1"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
+
+[profile.release]
+codegen-units = 1
+opt-level = "s"
+debug = true
+strip = false
+lto = true
